--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,15 +15,20 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   cupertino_icons: ^1.0.8
+  flutter_svg_provider: ^1.0.7
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
+
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - assets/img/
+    - assets/icons/
